--- a/_teaching/stt200.md
+++ b/_teaching/stt200.md
@@ -8,4 +8,4 @@ date: 2018-09-01
 location: "East Lansing, MI"
 ---
 
-Built R Shiny apps.
+In addition to the usual undergraduate TA responsibilities like grading and exam proctoring, I built interactive R Shiny apps meant to illustrate fundamental statistical concepts to an introductory statistics class of over 1500 students.  (I plan to link some example apps soon)
