--- a/_teaching/stt200.md
+++ b/_teaching/stt200.md
@@ -1,5 +1,5 @@
 ---
-title: "R Shiny Teaching Assistant"
+title: "R Shiny Teaching Assistant, STT 200: Statistical Methods"
 collection: teaching
 type: "Undergraduate course"
 permalink: /teaching/stt200
