--- a/_teaching/stt200.md
+++ b/_teaching/stt200.md
@@ -3,7 +3,7 @@ title: "R Shiny Teaching Assistant, STT 200: Statistical Methods"
 collection: teaching
 type: "Undergraduate course"
 permalink: /teaching/stt200
-venue: "Michigan State University, Statistics"
+venue: "Michigan State University, Department of Statistics"
 date: 2018-09-01
 location: "East Lansing, MI"
 ---
